apps/argocd/patch-argocd-application-controller-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-application-controller
spec:
  template:
    spec:
      tolerations:
        - key: cwmc-role
          value: operator
          effect: NoSchedule
        - key: cwmc-role
          value: monitoring
          effect: NoSchedule
