apps/argocd/patch-argocd-applicationset-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-applicationset-controller
spec:
  template:
    spec:
      tolerations:
        - key: cwmc-role
          value: operator
          effect: NoSchedule
        - key: cwmc-role
          value: monitoring
          effect: NoSchedule
