apps/argocd/patch-argocd-repo-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      automountServiceAccountToken: true
      containers:
        - name: uumpa
          command: ["/var/run/argocd/argocd-cmp-server"]
          image: ghcr.io/orihoch/uumpa-argocd-plugin/plugin:7a2d885d4e28a1dbaceb99d854e03af085a870a6
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - mountPath: /var/run/argocd
              name: var-files
            - mountPath: /home/argocd/cmp-server/plugins
              name: plugins
            - mountPath: /.cache
              name: uumpa-cache
            - mountPath: /tmp
              name: uumpa-temp
            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
              subPath: plugin.yaml
              name: uumpa-plugin-config
      tolerations:
        - key: cwmc-role
          value: operator
          effect: NoSchedule
        - key: cwmc-role
          value: monitoring
          effect: NoSchedule
      volumes:
        - name: uumpa-cache
          emptyDir: {}
        - name: uumpa-temp
          emptyDir: {}
        - name: uumpa-plugin-config
          configMap:
            name: uumpa-plugin
