apps/argocd/ingress-https.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: argocd-server-https
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
  - host: argocd.${CWMC_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: http
        pathType: Prefix
        path: /
  tls:
  - hosts:
    - argocd.${CWMC_DOMAIN}
    secretName: argocd-server-https
